--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,9 +2,13 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=aozhnl
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create
-spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=none
+#spring.sql.init.mode=always
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.liquibase.enabled=true
+spring.application.name=liquibase
+spring.liquibase.change-log=classpath:db/migration/migration.xml
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
