Add mail confirmation, add logging

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -6,14 +6,31 @@ spring.jpa.hibernate.ddl-auto=create
 spring.sql.init.mode=always
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# JWT configuration
+lot.app.jwtSecret= lotSecretKey
+lot.app.jwtExpirationMs= 86400000
+
+# Migration configuration
 spring.liquibase.enabled=false
 spring.application.name=liquibase
 spring.liquibase.change-log=classpath:db/migration/migration.xml
 
+# Mail sender configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=film.manager2021@gmail.com
-spring.mail.password=plokij321
+spring.mail.username=auction.lot1@gmail.com
+spring.mail.password=qweqweqasd12
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Logback configuration
+logging.config=classpath:logback/logback-spring.xml
+spring.main.banner-mode=log
+# Default loglevel for Request logging: [TRACE, DEBUG, INFO, WARN, ERROR, OFF]
+# High performance impact!!! Use only when needed
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=INFO
+# max file size
+spring.servlet.multipart.max-file-size=10MB
+# max request size
+spring.servlet.multipart.max-request-size=120MB
 
