--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -34,3 +34,16 @@ spring.servlet.multipart.max-file-size=10MB
 # max request size
 spring.servlet.multipart.max-request-size=120MB
 
+# Actuator configuration
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=metrics, health, info
+management.endpoints.web.cors.allowed-origins=*
+management.endpoints.web.cors.allowed-methods=*
+management.endpoints.web.cors.allowed-headers=*
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
+info.app.encoding=@project.build.sourceEncoding@
+info.app.java.version=@java.version@
+management.endpoint.health.show-components=always
+
