--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=aozhnl
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.sql.init.mode=always
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
@@ -11,7 +11,7 @@ lot.app.jwtSecret= lotSecretKey
 lot.app.jwtExpirationMs= 86400000
 
 # Migration configuration
-spring.liquibase.enabled=false
+spring.liquibase.enabled=true
 spring.application.name=liquibase
 spring.liquibase.change-log=classpath:db/migration/migration.xml
 
