Add userRole migration

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -13,6 +13,7 @@ lot.app.jwtExpirationMs= 86400000
 # Migration configuration
 spring.liquibase.enabled=true
 spring.application.name=liquibase
+spring.liquibase.drop-first=true
 spring.liquibase.change-log=classpath:db/migration/migration.xml
 
 # Mail sender configuration
