--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -36,8 +36,6 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=120MB
 
 # Actuator configuration
-management.endpoint.health.show-details=always
-management.endpoints.web.exposure.include=metrics, health, info
 management.endpoints.web.cors.allowed-origins=*
 management.endpoints.web.cors.allowed-methods=*
 management.endpoints.web.cors.allowed-headers=*
@@ -47,4 +45,24 @@ info.app.version=@project.version@
 info.app.encoding=@project.build.sourceEncoding@
 info.app.java.version=@java.version@
 management.endpoint.health.show-components=always
+
+# Admin
+# Spring admin server base URL
+spring.boot.admin.client.url=http://localhost:8081
+# Spring admin credentials
+spring.boot.admin.url=http://localhost:8081
+spring.boot.admin.username=admin
+spring.boot.admin.password=admin
+# Expose endpoints
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+# Admin server login and password for this client
+spring.boot.admin.client.username=admin
+spring.boot.admin.client.password=admin
+# Metadata for the admin server, otherwise we cannot access information about the client anymore
+spring.security.user.name=client
+spring.security.user.password=client
+spring.boot.admin.client.instance.metadata.user.name=${spring.security.user.name}
+spring.boot.admin.client.instance.metadata.user.password=${spring.security.user.password}
+
 
