--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=auction
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=aozhnl
@@ -12,7 +13,6 @@ lot.app.jwtExpirationMs= 86400000
 
 # Migration configuration
 spring.liquibase.enabled=true
-spring.application.name=liquibase
 spring.liquibase.drop-first=true
 spring.liquibase.change-log=classpath:db/migration/migration.xml
 
@@ -36,17 +36,12 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=120MB
 
 # Actuator configuration
-management.endpoints.web.cors.allowed-origins=*
-management.endpoints.web.cors.allowed-methods=*
-management.endpoints.web.cors.allowed-headers=*
 info.app.name=@project.name@
 info.app.description=@project.description@
 info.app.version=@project.version@
 info.app.encoding=@project.build.sourceEncoding@
 info.app.java.version=@java.version@
-management.endpoint.health.show-components=always
 
-# Admin
 # Spring admin server base URL
 spring.boot.admin.client.url=http://localhost:8081
 # Spring admin credentials
@@ -64,5 +59,3 @@ spring.security.user.name=client
 spring.security.user.password=client
 spring.boot.admin.client.instance.metadata.user.name=${spring.security.user.name}
 spring.boot.admin.client.instance.metadata.user.password=${spring.security.user.password}
-
-
