--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -13,39 +13,55 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>admin</name>
   <description>admin</description>
-  <properties>
-    <java.version>11</java.version>
-    <spring-boot-admin.version>2.3.1</spring-boot-admin.version>
-  </properties>
-
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+    <!-- dependencies used to enable admin server and UI -->
+    <!-- https://mvnrepository.com/artifact/de.codecentric/spring-boot-admin-starter-server -->
     <dependency>
       <groupId>de.codecentric</groupId>
       <artifactId>spring-boot-admin-starter-server</artifactId>
+      <version>${spring-boot-admin-server.version}</version>
     </dependency>
-
+    <!--Add login page and logout feature -->
+    <dependency>
+      <groupId>de.codecentric</groupId>
+      <artifactId>spring-boot-admin-server-ui-login</artifactId>
+      <version>${spring-boot-admin-server-ui-login.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.hazelcast</groupId>
+      <artifactId>hazelcast</artifactId>
+    </dependency>
+    <!--declare the admin server as a client, for self monitoring -->
+    <dependency>
+      <groupId>de.codecentric</groupId>
+      <artifactId>spring-boot-admin-starter-client</artifactId>
+      <version>${spring-boot-admin-starter-client.version}</version>
+    </dependency>
+    <!--mail notifications -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-mail</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-test</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>de.codecentric</groupId>
-        <artifactId>spring-boot-admin-dependencies</artifactId>
-        <version>${spring-boot-admin.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
   <build>
     <plugins>
       <plugin>
@@ -54,5 +70,11 @@
       </plugin>
     </plugins>
   </build>
+
+  <properties>
+    <spring-boot-admin-server.version>2.4.1</spring-boot-admin-server.version>
+    <spring-boot-admin-starter-client.version>2.4.1</spring-boot-admin-starter-client.version>
+    <spring-boot-admin-server-ui-login.version>1.5.7</spring-boot-admin-server-ui-login.version>
+  </properties>
 
 </project>
