--- a/admin/src/main/resources/application.properties
+++ b/admin/src/main/resources/application.properties
@@ -1,19 +1,32 @@
-# Application name
-spring.application.name=Lot-admin
-#Change server port
-server.port=8081
-# Spring admin custom endpoints
-spring.boot.admin.client.url=http://localhost:8080
-spring.boot.admin.routes.endpoints=env, metrics, trace, jolokia, info, configprops
-spring.boot.admin.ui.cache.no-cache=true
-spring.boot.admin.ui.cache-templates=false
-spring.boot.admin.ui.title=Lot Admin
-# Spring mail config
-spring.mail.host=smtp.mailtrap.io
-spring.mail.username=95c91cf54cd71c
-spring.mail.password=d89cf88760fc40
-spring.mail.port=25
-#spring.boot.admin.notify.mail.to=admin@example.com
-# Default user name and password
+spring.application.name=spring-boot-admin-server
+
 spring.security.user.name=admin
 spring.security.user.password=admin
+
+server.port=8081
+#configs to connect to self register the admin server as a client
+spring.boot.admin.client.url=http://localhost:8080
+spring.boot.admin.client.username=${spring.security.user.name}
+spring.boot.admin.client.password=${spring.security.user.password}
+
+#configs to give secured server info
+spring.boot.admin.client.instance.metadata.user.name=${spring.security.user.name}
+spring.boot.admin.client.instance.metadata.user.password=${spring.security.user.password}
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+#mail notifications
+spring.mail.host=smtp.gmail.com
+spring.mail.username=auction.lot1@gmail.com
+spring.mail.password=qweqweqasd12
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.boot.admin.notify.mail.to=gherta.nicolai@gmail.com
+
+#hipchat notifications
+#spring.boot.admin.notify.hipchat.auth-token=<generated_token>
+#spring.boot.admin.notify.hipchat.room-id=<room-id>
+#spring.boot.admin.notify.hipchat.url=https://youcompany.hipchat.com/v2/
