Add some properties for Spring boot Admin

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -59,3 +59,5 @@ spring.security.user.name=client
 spring.security.user.password=client
 spring.boot.admin.client.instance.metadata.user.name=${spring.security.user.name}
 spring.boot.admin.client.instance.metadata.user.password=${spring.security.user.password}
+spring.boot.admin.client.instance.service-base-url=http://localhost:8080
+
