Add "for" and "id" to labels/inputs

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -42,6 +42,8 @@ info.app.version=@project.version@
 info.app.encoding=@project.build.sourceEncoding@
 info.app.java.version=@java.version@
 
+server.port=8080
+
 # Spring admin server base URL
 spring.boot.admin.client.url=http://localhost:8081
 # Spring admin credentials
