--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -123,6 +123,10 @@
 			<artifactId>liquibase-core</artifactId>
 			<version>4.5.0</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
