--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -63,3 +63,5 @@ spring.boot.admin.client.instance.metadata.user.name=${spring.security.user.name
 spring.boot.admin.client.instance.metadata.user.password=${spring.security.user.password}
 spring.boot.admin.client.instance.service-base-url=http://localhost:8080
 
+spring.jpa.open-in-view=false
+
