--- a/Frontend/auction/package.json
+++ b/Frontend/auction/package.json
@@ -1,36 +1,35 @@
 {
-  "name": "auction",
+  "name": "vue-3-authentication-jwt",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "start webpack": "webpack-dev-server --open",
-    "build webpack": "webpack --mode production"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/vue-fontawesome": "^3.0.0-3",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
-    "vee-validate": "^2.2.8",
-    "vue": "^3.1.1",
-    "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
+    "vee-validate": "^4.3.5",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.6",
+    "vuex": "^4.0.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11",
-    "css-loader": "^3.3.2",
-    "html-webpack-plugin": "^3.2.0",
-    "path": "^0.12.7",
-    "vue-loader": "^14.2.3",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "eslint-plugin-vue": "^7.0.0"
   },
   "eslintConfig": {
     "root": true,
@@ -38,7 +37,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/vue3-essential",
       "eslint:recommended"
     ],
     "parserOptions": {
