Add ul for spring config, add in UserController - getById() method, add template for email, add generic to controller methods

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.sql.init.mode=always
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# Client url
+spring.client.url=http://localhost:8081
+
 # JWT configuration
 lot.app.jwtSecret= lotSecretKey
 lot.app.jwtExpirationMs= 86400000
