--- a/Frontend/auction/package.json
+++ b/Frontend/auction/package.json
@@ -16,6 +16,8 @@
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "sockjs-client": "^1.3.0",
+    "webstomp-client": "^1.2.6",
     "vee-validate": "^4.3.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.6",
