--- a/Frontend/auction/package.json
+++ b/Frontend/auction/package.json
@@ -11,18 +11,25 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^3.0.0-3",
+    "ag-grid-community": "^26.2.0",
+    "ag-grid-vue": "^26.2.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "sass-loader": "^12.4.0",
     "sockjs-client": "^1.3.0",
-    "webstomp-client": "^1.2.6",
     "vee-validate": "^4.3.5",
+    "ag-grid-vue3": "26.0.0",
+    "vue-class-component": "8.0.0-rc.1",
     "vue": "^3.0.0",
+    "vue-loader": "^15.9.8",
+    "vue-property-decorator": "^8.0.0",
     "vue-router": "^4.0.6",
     "vue-window-size": "^1.1.2",
     "vuex": "^4.0.0",
+    "webstomp-client": "^1.2.6",
     "yup": "^0.32.9"
   },
   "devDependencies": {
