--- a/Frontend/auction/package.json
+++ b/Frontend/auction/package.json
@@ -13,17 +13,18 @@
     "@fortawesome/vue-fontawesome": "^3.0.0-3",
     "ag-grid-community": "^26.2.0",
     "ag-grid-vue": "^26.2.0",
+    "ag-grid-vue3": "26.0.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "cloudinary-vue": "^1.2.3",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "sass-loader": "^12.4.0",
     "sockjs-client": "^1.3.0",
     "vee-validate": "^4.3.5",
-    "ag-grid-vue3": "26.0.0",
-    "vue-class-component": "8.0.0-rc.1",
     "vue": "^3.0.0",
+    "vue-class-component": "8.0.0-rc.1",
     "vue-loader": "^15.9.8",
     "vue-property-decorator": "^8.0.0",
     "vue-router": "^4.0.6",
@@ -39,7 +40,8 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "vuejs-progress-bar": "^1.1.1"
   },
   "eslintConfig": {
     "root": true,
