--- a/Frontend/auction/package.json
+++ b/Frontend/auction/package.json
@@ -26,6 +26,7 @@
     "vue": "^3.0.0",
     "vue-class-component": "8.0.0-rc.1",
     "vue-loader": "^15.9.8",
+    "vue-material": "^1.0.0-beta-15",
     "vue-property-decorator": "^8.0.0",
     "vue-router": "^4.0.6",
     "vue-window-size": "^1.1.2",
