Implement possibility to reset password

--- a/Frontend/auction/package.json
+++ b/Frontend/auction/package.json
@@ -26,10 +26,12 @@
     "vee-validate": "^4.3.5",
     "vue": "^3.0.0",
     "vue-class-component": "8.0.0-rc.1",
+    "vue-const": "^1.1.2",
     "vue-loader": "^15.9.8",
     "vue-material": "^1.0.0-beta-15",
     "vue-property-decorator": "^8.0.0",
     "vue-router": "^4.0.6",
+    "vue-social-sharing": "^4.0.0-alpha4",
     "vue-window-size": "^1.1.2",
     "vuex": "^4.0.0",
     "webstomp-client": "^1.2.6",
