--- a/Frontend/auction/package.json
+++ b/Frontend/auction/package.json
@@ -33,6 +33,7 @@
     "vue-router": "^4.0.6",
     "vue-social-sharing": "^4.0.0-alpha4",
     "vue-window-size": "^1.1.2",
+    "vue3-datepicker": "^0.3.1",
     "vuex": "^4.0.0",
     "webstomp-client": "^1.2.6",
     "yup": "^0.32.9"
