Add cors properties, create actuator component with data

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -7,6 +7,10 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.sql.init.mode=always
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
 # Client url
 spring.client.url=http://localhost:8081
 
@@ -33,6 +37,9 @@ spring.main.banner-mode=log
 # Default loglevel for Request logging: [TRACE, DEBUG, INFO, WARN, ERROR, OFF]
 # High performance impact!!! Use only when needed
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=INFO
+
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
 # max file size
 spring.servlet.multipart.max-file-size=10MB
 # max request size
@@ -56,6 +63,11 @@ spring.boot.admin.password=admin
 # Expose endpoints
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+# Cors
+management.endpoints.web.cors.allowed-origins=*
+management.endpoints.web.cors.allowed-methods=*
+management.endpoints.web.cors.allowed-headers=*
+
 # Admin server login and password for this client
 spring.boot.admin.client.username=admin
 spring.boot.admin.client.password=admin
