--- a/Frontend/auction/package.json
+++ b/Frontend/auction/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^3.0.0-3",
+    "@j-t-mcc/vue3-chartjs": "^1.2.0",
     "@popperjs/core": "^2.11.0",
     "@vue/cli-plugin-unit-jest": "^4.5.10",
     "ag-grid-community": "^26.2.0",
@@ -21,6 +22,7 @@
     "ag-grid-vue3": "26.0.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "chart.js": "^3.7.0",
     "cloudinary-vue": "^1.2.3",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
@@ -29,6 +31,7 @@
     "sockjs-client": "^1.3.0",
     "vee-validate": "^4.3.5",
     "vue": "^3.0.0",
+    "vue-chartjs": "^3.5.1",
     "vue-class-component": "8.0.0-rc.1",
     "vue-const": "^1.1.2",
     "vue-loader": "^15.9.8",
