Implement possibility to change loglevel from client side

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -63,6 +63,7 @@ spring.boot.admin.password=admin
 # Expose endpoints
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+management.endpoint.loggers.enabled=true
 # Cors
 management.endpoints.web.cors.allowed-origins=*
 management.endpoints.web.cors.allowed-methods=*
