--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -238,6 +238,13 @@
         </exclusion>
       </exclusions>
     </dependency>
+
+    <dependency>
+      <groupId>com.paypal.sdk</groupId>
+      <artifactId>rest-api-sdk</artifactId>
+      <version>1.4.2</version>
+    </dependency>
+
   </dependencies>
 
   <dependencyManagement>
