Add possibility to create new category, refactor AuctionWinnerService, add a test for vue project

--- a/Frontend/auction/package.json
+++ b/Frontend/auction/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.6.0",
     "chart.js": "^3.7.0",
     "cloudinary-vue": "^1.2.3",
+    "conditional-specs": "^1.0.1",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
@@ -49,12 +50,13 @@
     "@babel/preset-env": "^7.16.5",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-unit-jest": "4.5.13",
+    "@vue/cli-service": "~4.5.13",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/test-utils": "^2.0.0-rc.18",
-    "@vue/vue3-jest": "^27.0.0-alpha.4",
+    "@vue/vue3-jest": "^26.0.1",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.4.5",
+    "babel-jest": "26.6.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "typescript": "~3.9.3",
