--- a/Frontend/auction/package.json
+++ b/Frontend/auction/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^3.0.0-3",
     "@j-t-mcc/vue3-chartjs": "^1.2.0",
+    "@kyvg/vue3-notification": "^2.3.4",
     "@popperjs/core": "^2.11.0",
     "@vue/cli-plugin-unit-jest": "^4.5.10",
     "ag-grid-community": "^26.2.0",
