--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -245,6 +245,13 @@
       <version>1.4.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>2.13.1</version>
+    </dependency>
+
+
   </dependencies>
 
   <dependencyManagement>
