--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -250,7 +250,11 @@
       <artifactId>jackson-datatype-jsr310</artifactId>
       <version>2.13.1</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-jpamodelgen</artifactId>
+      <version>5.3.7.Final</version>
+    </dependency>
 
   </dependencies>
 
