--- a/Frontend/auction/package.json
+++ b/Frontend/auction/package.json
@@ -42,6 +42,7 @@
     "vue-router": "^4.0.6",
     "vue-social-sharing": "^4.0.0-alpha4",
     "vue-window-size": "^1.1.2",
+    "vue3-date-time-picker": "^2.4.4",
     "vue3-datepicker": "^0.3.1",
     "vuex": "^4.0.0",
     "webstomp-client": "^1.2.6",
