--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -256,6 +256,18 @@
       <version>5.3.7.Final</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.retry</groupId>
+      <artifactId>spring-retry</artifactId>
+      <version>1.2.5.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aspects</artifactId>
+      <version>5.2.8.RELEASE</version>
+    </dependency>
+
   </dependencies>
 
   <dependencyManagement>
