--- a/Frontend/auction/package.json
+++ b/Frontend/auction/package.json
@@ -39,6 +39,7 @@
     "vue-const": "^1.1.2",
     "vue-loader": "^15.9.8",
     "vue-material": "^1.0.0-beta-15",
+    "vue-notification-bell": "^0.9.12",
     "vue-property-decorator": "^8.0.0",
     "vue-router": "^4.0.6",
     "vue-social-sharing": "^4.0.0-alpha4",
