--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -11,25 +11,25 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #caching
-spring.redis.host=127.0.0.1
-spring.redis.password=123456
-spring.redis.port=6379
-caching.enabled=true
-caching.type=redis
-caching.time-to-live-minutes=60
-caching.configured-caches.usersCache.enabled=true
-caching.configured-caches.usersCache.time-to-live-minutes=60
-caching.configured-caches.growthPlansCache.enabled=true
-caching.configured-caches.growthPlansCache.time-to-live-minutes=60
-caching.configured-caches.bookRecordsCache.enabled=true
-caching.configured-caches.bookRecordsCache.time-to-live-minutes=60
-caching.configured-caches.articleRecordsCache.enabled=true
-caching.configured-caches.articleRecordsCache.time-to-live-minutes=60
-caching.configured-caches.exerciseRecordsCache.enabled=true
-caching.configured-caches.exerciseRecordsCache.time-to-live-minutes=60
-caching.configured-caches.presentationRecordsCache.enabled=true
-caching.configured-caches.presentationRecordsCache.time-to-live-minutes=60
-spring.profiles.active=dev
+#spring.redis.host=127.0.0.1
+#spring.redis.password=123456
+#spring.redis.port=6379
+#caching.enabled=true
+#caching.type=redis
+#caching.time-to-live-minutes=60
+#caching.configured-caches.usersCache.enabled=true
+#caching.configured-caches.usersCache.time-to-live-minutes=60
+#caching.configured-caches.growthPlansCache.enabled=true
+#caching.configured-caches.growthPlansCache.time-to-live-minutes=60
+#caching.configured-caches.bookRecordsCache.enabled=true
+#caching.configured-caches.bookRecordsCache.time-to-live-minutes=60
+#caching.configured-caches.articleRecordsCache.enabled=true
+#caching.configured-caches.articleRecordsCache.time-to-live-minutes=60
+#caching.configured-caches.exerciseRecordsCache.enabled=true
+#caching.configured-caches.exerciseRecordsCache.time-to-live-minutes=60
+#caching.configured-caches.presentationRecordsCache.enabled=true
+#caching.configured-caches.presentationRecordsCache.time-to-live-minutes=60
+#spring.profiles.active=dev
 
 
 # Client url
