--- a/Frontend/auction/package.json
+++ b/Frontend/auction/package.json
@@ -17,6 +17,8 @@
     "@j-t-mcc/vue3-chartjs": "^1.2.0",
     "@kyvg/vue3-notification": "^2.3.4",
     "@popperjs/core": "^2.11.0",
+    "@tiptap/starter-kit": "^2.0.0-beta.174",
+    "@tiptap/vue-3": "^2.0.0-beta.89",
     "@vue/cli-plugin-unit-jest": "^4.5.10",
     "ag-grid-community": "^26.2.0",
     "ag-grid-vue": "^26.2.0",
@@ -30,7 +32,7 @@
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
-    "sass-loader": "^12.4.0",
+    "sass": "^1.49.0",
     "sockjs-client": "^1.3.0",
     "vee-validate": "^4.3.5",
     "vue": "^3.0.0",
@@ -63,6 +65,7 @@
     "babel-jest": "26.6.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "sass-loader": "^10.2.1",
     "typescript": "~3.9.3",
     "vue-jest": "^5.0.0-alpha.10",
     "vuejs-progress-bar": "^1.1.1"
