--- a/Frontend/auction/package.json
+++ b/Frontend/auction/package.json
@@ -26,6 +26,7 @@
     "ag-grid-vue3": "26.0.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "chart.js": "^3.7.0",
     "cloudinary-vue": "^1.2.3",
     "conditional-specs": "^1.0.1",
     "core-js": "^3.6.5",
@@ -35,6 +36,7 @@
     "sockjs-client": "^1.3.0",
     "vee-validate": "^4.3.5",
     "vue": "^3.0.0",
+    "vue-chartjs": "^3.5.1",
     "vue-class-component": "8.0.0-rc.1",
     "vue-const": "^1.1.2",
     "vue-loader": "^15.9.8",
@@ -46,6 +48,7 @@
     "vue-window-size": "^1.1.2",
     "vue3-date-time-picker": "^2.4.4",
     "vue3-datepicker": "^0.3.1",
+    "vue3-flip-countdown": "^0.1.6",
     "vuex": "^4.0.0",
     "webstomp-client": "^1.2.6",
     "yup": "^0.32.9"
