Implement register feature on mobile

--- a/mobile-demo-n-lyaerd-mvvm-app/app/presentation/src/main/AndroidManifest.xml
+++ b/mobile-demo-n-lyaerd-mvvm-app/app/presentation/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         </activity>
         <activity android:name=".presentation.MainActivity" />
         <activity android:name=".presentation.features.login.LoginActivity" />
+        <activity android:name=".presentation.features.register.RegisterActivity" />
     </application>
 
 </manifest>
