--- a/mobile-demo-n-lyaerd-mvvm-app/app/presentation/build.gradle
+++ b/mobile-demo-n-lyaerd-mvvm-app/app/presentation/build.gradle
@@ -85,6 +85,10 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
 
+    //Image
+    implementation 'com.squareup.picasso:picasso:2.8'
+
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
