--- a/Frontend/auction/package.json
+++ b/Frontend/auction/package.json
@@ -34,6 +34,7 @@
     "popper.js": "^1.16.1",
     "sass": "^1.49.0",
     "sockjs-client": "^1.3.0",
+    "v-onboarding": "^1.0.1",
     "vee-validate": "^4.3.5",
     "vue": "^3.0.0",
     "vue-chartjs": "^3.5.1",
