Implement connection to network listener and popup

--- a/mobile-demo-n-lyaerd-mvvm-app/settings.gradle
+++ b/mobile-demo-n-lyaerd-mvvm-app/settings.gradle
@@ -12,7 +12,7 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "mobile-demo-mvvm"
+rootProject.name = "LOT"
 include ':app:presentation'
 include ':app:data'
 include ':app:domain'
