Folders refactor for mobile

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=auction
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.url=jdbc:postgresql://database-auction.cnexzzticvxr.eu-north-1.rds.amazonaws.com:5432/
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://34.77.37.221:5432/auction
+spring.datasource.username=admin
 #spring.datasource.password=aozhnl
 spring.datasource.password=Apevuvajy42
 spring.datasource.driver-class-name=org.postgresql.Driver
