--- a/Frontend/auction/pipelines/Dockerfile
+++ b/Frontend/auction/pipelines/Dockerfile
@@ -4,13 +4,13 @@ RUN npm install -g http-server
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY package*.json /app/package.json
 
 RUN npm install
 
-COPY . .
+COPY . /app
 
 RUN npm run build
 
-EXPOSE 8080
+EXPOSE 8081
 CMD [ "http-server", "dist" ]
