--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=auction
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.url=jdbc:postgresql://34.77.37.221/neat-environs-343619:europe-west1:auction
+spring.datasource.url=jdbc:postgresql://34.77.37.221/postgres?currentSchema=auction
 spring.datasource.username=admin
 #spring.datasource.password=aozhnl
 spring.datasource.password=Apevuvajy42
