Prepare project for deploy

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=auction
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.url=jdbc:postgresql://34.77.37.221/postgres?currentSchema=auction
-spring.datasource.username=admin
+spring.datasource.url=jdbc:postgresql://34.77.37.221:5432/auction
+spring.datasource.username=postgres
 #spring.datasource.password=aozhnl
 spring.datasource.password=Apevuvajy42
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -53,7 +53,7 @@ info.app.version=@project.version@
 info.app.encoding=@project.build.sourceEncoding@
 info.app.java.version=@java.version@
 
-server.port=8080
+server.port=8082
 
 # Spring admin server base URL
 spring.boot.admin.client.url=http://localhost:8081
