--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 spring.application.name=auction
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.url=jdbc:postgresql://34.77.37.221:5432/auction
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-#spring.datasource.password=aozhnl
-spring.datasource.password=Apevuvajy42
+spring.datasource.password=aozhnl
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=validate
 spring.sql.init.mode=always
