-Fix API for getUserByParticipant -Remove public from serviceImpl -Add statistic about money

--- a/Backend/src/main/resources/application-prod.properties
+++ b/Backend/src/main/resources/application-prod.properties
@@ -4,3 +4,6 @@ spring.datasource.password=Apevuvajy42
 
 # Client url
 spring.client.url=http://34.140.181.128:8082
+
+# Liquibase
+spring.liquibase.drop-first=false
