--- a/JTOM/platformio.ini
+++ b/JTOM/platformio.ini
@@ -14,5 +14,4 @@ board = nodemcuv2
 framework = arduino
 monitor_speed = 115200
 upload_port = com3
-lib_deps = 
-	bblanchon/ArduinoJson@^6.19.3
+lib_deps = bblanchon/ArduinoJson@^6.19.3
