-change security config

--- a/Backend/src/main/resources/application-prod.properties
+++ b/Backend/src/main/resources/application-prod.properties
@@ -6,4 +6,4 @@ spring.datasource.password=Apevuvajy42
 spring.client.url=http://35.205.252.53:8082/
 
 # Liquibase
-spring.liquibase.drop-first=false
+spring.liquibase.drop-first=true
