-Change dependencies to improve performance. -Add possibility to see delivery address

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -16,7 +16,7 @@ lot.app.jwtExpirationMs= 86400000
 
 # Migration configuration
 spring.liquibase.enabled=true
-spring.liquibase.drop-first=true
+spring.liquibase.drop-first=false
 spring.liquibase.change-log=classpath:db/migration/migration.xml
 
 # Mail sender configuration
