--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -51,7 +51,7 @@ info.app.java.version=@java.version@
 server.port=8081
 
 # Spring admin server base URL
-spring.boot.admin.client.url=http://localhost:8081
+spring.boot.admin.client.url=http://localhost:8081,http://127.0.0.1:8081
 # Spring admin credentials
 spring.boot.admin.url=http://localhost:8081
 spring.boot.admin.username=admin
