Fixed bugs related to payment, add some categories/subCategories

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=auction
+
+# Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=aozhnl
@@ -12,7 +14,7 @@ spring.client.url=http://localhost:8082
 
 # JWT configuration
 lot.app.jwtSecret= lotSecretKey
-lot.app.jwtExpirationMs= 86400000
+lot.app.jwtExpirationMs= 864000000
 
 # Migration configuration
 spring.liquibase.enabled=true
