Preparing for deployment

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=auction
 
 # Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/lot
 spring.datasource.username=postgres
 spring.datasource.password=aozhnl
 spring.datasource.driver-class-name=org.postgresql.Driver
