--- a/Frontend/auction/package.json
+++ b/Frontend/auction/package.json
@@ -60,8 +60,7 @@
     "eslint-plugin-vue": "^7.0.0",
     "sass-loader": "^10.2.1",
     "typescript": "~3.9.3",
-    "vue-jest": "^5.0.0-alpha.10",
-    "webpack-bundle-analyzer": "^4.5.0"
+    "vue-jest": "^5.0.0-alpha.10"
   },
   "browserslist": [
     "> 1%",
