--- a/Backend/src/main/resources/application-prod.properties
+++ b/Backend/src/main/resources/application-prod.properties
@@ -6,4 +6,4 @@ spring.datasource.password=Apevuvajy42
 spring.client.url=http://35.195.237.57:8082,http://localhost:8081,http://127.0.0.1:8081,
 
 # Liquibase
-spring.liquibase.drop-first=true
+spring.liquibase.drop-first=false
